<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera_navigation"
    app:startDestination="@id/permissions_fragment">

    <fragment
        android:id="@+id/permissions_fragment"
        android:name="com.globalhiddenodds.pulseship.ui.fragments.camera.PermissionsFragment"
        android:label="@string/lbl_permissions" >
        <action
            android:id="@+id/action_permissions_to_selector"
            app:destination="@id/selector_fragment"
            app:popUpTo="@id/permissions_fragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/selector_fragment"
        android:name="com.globalhiddenodds.pulseship.ui.fragments.camera.SelectorFragment"
        android:label="@string/lbl_selector_camera" >
        <action
            android:id="@+id/action_selector_to_camera"
            app:destination="@id/camera_fragment" />
    </fragment>
    <fragment
        android:id="@+id/camera_fragment"
        android:name="com.globalhiddenodds.pulseship.ui.fragments.camera.CameraFragment"
        android:label="@string/lbl_camera_live">
        <argument
            android:name="camera_id"
            app:argType="string"
            app:nullable="false"/>

        <argument
            android:name="pixel_format"
            app:argType="integer"
            app:nullable="false"/>
        <action
            android:id="@+id/action_camera_to_permissions"
            app:destination="@id/permissions_fragment"
            app:popUpTo="@id/camera_fragment"
            app:popUpToInclusive="true"/>

        <action
            android:id="@+id/action_camera_to_jpeg_viewer"
            app:launchSingleTop="true"
            app:destination="@id/face_fragment" />

    </fragment>
    <fragment
        android:id="@+id/face_fragment"
        android:name="com.globalhiddenodds.pulseship.ui.fragments.face.FaceFragment"
        android:label="@string/lbl_face"
        tools:layout="@layout/fragment_face">

        <argument
            android:name="file_path"
            app:argType="string"
            app:nullable="false"/>

        <argument
            android:name="orientation"
            app:argType="integer"
            android:defaultValue="0" />

        <argument
            android:name="depth"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
</navigation>