<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.messages.MessagesFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorLightGray"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <ImageView
                android:id="@+id/addMessageImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/lbl_image_message"
                ads:srcCompat="@drawable/outline_add_photo_alternate_24"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/messageEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:autofillHints="true"
                android:background="@drawable/edit_text_shadow"
                android:hint="@string/lbl_say_something"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/lbl_send"
                android:enabled="false"
                android:src="@drawable/outline_send_gray_24"/>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messageRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/linearLayout"
            android:background="@android:color/white"
            android:paddingHorizontal="16dp" />

    </RelativeLayout>
</layout>
