<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/face_background">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/medium_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".95" />

        <ImageView
            android:id="@+id/image_capture"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/lbl_image"
            android:scaleType="fitStart"
            android:src="@drawable/splash"
            android:adjustViewBounds="true"
            android:layout_marginTop="32dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:elevation="4dp"
            android:fontFamily="@font/roboto_bold"
            android:insetLeft="8dp"
            android:insetRight="10dp"
            android:text="@string/lbl_agree"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            app:backgroundTint="@color/primaryDarkColor"
            app:icon="@drawable/ic_check_box"
            app:iconGravity="textStart"
            app:iconTint="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/medium_guideline"
            app:strokeWidth="1dp"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:elevation="4dp"
            android:fontFamily="@font/roboto_bold"
            android:insetLeft="8dp"
            android:insetRight="10dp"
            android:text="@string/lbl_repeat"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            app:backgroundTint="@color/primaryDarkColor"
            app:icon="@drawable/ic_refresh"
            app:iconGravity="textStart"
            app:iconTint="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/btn_ok"
            app:strokeWidth="1dp"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>