<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        tools:context=".ui.fragments.login.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/medium_guideline"
            app:layout_constraintGuide_percent=".50"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_guideline"
            app:layout_constraintGuide_percent=".05"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_guideline"
            app:layout_constraintGuide_percent=".95"
            android:orientation="vertical"/>

        <TextView
            android:id="@+id/lbl_welcome"
            style="@style/Widget.PulseShip.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/lbl_welcome"
            android:textColor="@color/primaryDarkColor"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lbl_input_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:clipChildren="false"
            android:hint="@string/lbl_login"
            android:textColorHint="@color/secondaryTextColor"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxStrokeColor="@color/primaryDarkColor"
            app:boxStrokeWidth="2dp"
            app:circularflow_defaultRadius="2dp"
            app:endIconTint="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_welcome">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_email"
                android:drawableTint="@android:color/black"
                android:fontFamily="@font/roboto"
                android:inputType="textEmailAddress"
                android:singleLine="false"
                android:textColor="@color/secondaryTextColor"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lbl_input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/lbl_password"
            android:textColorHint="@android:color/black"
            app:boxCornerRadiusBottomEnd="4dp"
            app:boxCornerRadiusBottomStart="4dp"
            app:boxCornerRadiusTopEnd="4dp"
            app:boxCornerRadiusTopStart="4dp"
            app:boxStrokeColor="@color/primaryDarkColor"
            app:boxStrokeWidth="2dp"
            app:circularflow_defaultRadius="2dp"
            app:hintTextColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_input_login"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:elevation="4dp"
            android:fontFamily="@font/roboto_bold"
            android:insetLeft="8dp"
            android:insetRight="16dp"
            android:text="@string/lbl_login"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            app:icon="@drawable/ic_add"
            app:iconTint="@android:color/white"
            app:iconGravity="textStart"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/medium_guideline"
            app:strokeWidth="1dp"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:elevation="4dp"
            android:fontFamily="@font/roboto_bold"
            android:insetLeft="8dp"
            android:insetRight="10dp"
            android:text="@string/lbl_sign_up"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            app:icon="@drawable/ic_add"
            app:iconGravity="textStart"
            app:iconTint="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/medium_guideline"
            app:strokeWidth="1dp"
            tools:ignore="TextContrastCheck" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/lbl_input_password"
            app:layout_constraintStart_toStartOf="@+id/lbl_input_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>